<resources>
    <string name="app_name">CalculaIMC</string>
    <string name="peso">Peso:</string>
    <string name="altura">Altura:</string>
    <string name="imc">IMC:</string>

    <string name="erro_peso"> Campo peso deve ser preenchido. </string>
    <string name="erro_altura"> Campo altura deve ser preenhchido. </string>
    <string name="erro_zeros_altura">Campo altura deve ser diferente de 0. </string>
    <string name="calcular_clique_longo">Botão para calcular o IMC</string>

    <string name="hint_peso">Peso em Kg</string>
    <string name="hint_altura">Altura em m</string>

    <string name="zeros">0,00</string>

    <string name="calcular">Calcular</string>
    <string name="limpar">Limpar</string>


</resources>